--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "chat-app-server",
   "version": "1.0.0",
   "description": "A server for a chatroom app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
