--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   },
   "homepage": "https://github.com/Khalidxx/chat-app-server#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.7.0",
     "socket.io": "^4.0.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.13"
   }
 }
